# Nebula-Launcher

./: .env.pub  auth-callback.html  build.bat  index.html  package.json  tauri_keys.txt  tauri_keys_utf8.txt  test_run.py
.github/workflows/: deploy-website.yml
auth/: sign-in.html  sign-up.html
cpp-core/: CMakeLists.txt
cpp-core/src/: CommandProcessor.cpp  CommandProcessor.h  FileSystem.cpp  FileSystem.h  Launcher.cpp  Launcher.h  main.cpp
cpp-core/src/models/: InstanceMetadata.h  Modpack.h
cpp-core/src/network/: APIService.cpp  APIService.h  DownloadManager.cpp  DownloadManager.h  LoginManager.cpp  LoginManager.h
cpp-launcher/: CMakeLists.txt
cpp-launcher/src/: FileSystem.cpp  FileSystem.h  main.cpp
cpp-launcher/src/ui/: MainWindow.cpp  MainWindow.h
scripts/: tauri-build.js
src-tauri/: output.txt  tauri.conf.json  tauri.key
src-tauri/src/: filesystem.rs  launcher.rs  lumina_core.rs  main.rs  parallel_download.rs
src/components/Modpacks/: ModpackCard.tsx  ModpackDetailsRefactored.tsx  ModpacksPage.tsx
src/components/Modpacks/Details/Sections/: ModsSection.tsx  WorldsSection.tsx
src/components/Settings/: SettingsPage.tsx
src/contexts/: LauncherContext.tsx
src/hooks/: useLuminaCore.ts
src/services/: curseforgeService.ts  launcherService.ts  modrinthService.ts
website/: index.html
